@@ -3,7 +3,7 @@
 # ==============================================================================
 
 
-residuals.mi.method <- function ( object, y ) {
+residuals.mi.method <- function ( object, y, ... ) {
     return( y - fitted( object ) )
 }
 
@@ -17,7 +17,7 @@ residuals.mi.method <- function ( object, y ) {
 # extract residual values for mi.dichotomous class object
 # ==============================================================================
 
-residuals.mi.dichotomous <-   function ( object, y ) {
+residuals.mi.dichotomous <-   function (object, y, ...) {
     return( dicot( y ) - fitted ( object ) )
   }
 
@@ -31,7 +31,7 @@ residuals.mi.dichotomous <-   function ( object, y ) {
 # extract residual values for mi.logcontinuous class object
 # ==============================================================================
 
-residuals.mi.logcontinuous <-   function ( object, y ) {
+residuals.mi.logcontinuous <-   function (object, y, ...) {
     return( log( y ) - log( fitted ( object ) ) )
   }
 
@@ -46,7 +46,7 @@ residuals.mi.logcontinuous <-   function ( object, y ) {
 # extract residual values for mi.sqrtcontinuous class object
 # ==============================================================================
 
-residuals.mi.sqrtcontinuous <-   function ( object, y ) {
+residuals.mi.sqrtcontinuous <-   function (object, y, ...) {
     return( sqrt(y) - sqrt(fitted ( object )) )
     #return( y - fitted ( object ) )
   }
@@ -62,7 +62,7 @@ residuals.mi.sqrtcontinuous <-   function ( object, y ) {
 # extract residual values for mi.mixed class object
 # ==============================================================================
 
-residuals.mi.mixed <-   function ( object, y ) {
+residuals.mi.mixed <-   function (object, y, ...) {
    return( list(residual.values.1 = 1*( y > 0 ) - fitted( object )[[1]], 
                 residual.values.2 = y[as.double( names( fitted( object )[[2]]))]-fitted( object )[[2]]) )
 }
@@ -79,7 +79,7 @@ residuals.mi.mixed <-   function ( object, y ) {
 # extract residual values for mi.sqrtcontinuous class object
 # ==============================================================================
 
-residuals.mi.categorical <-   function ( object, y ) {
+residuals.mi.categorical <-   function (object, y, ...) {
     return( object$residual )
     #return( y - fitted ( object ) )
 }
