@@ -4,7 +4,7 @@
 \alias{mi.categorical-class}
 % Function
 \alias{mi.categorical}
-\alias{resid,mi.categorical-method}
+\alias{residuals.mi.categorical}
 \alias{plot.mi.categorical}
 
 \title{ 
@@ -15,7 +15,7 @@
 }
 \usage{
   mi.categorical( formula, data = NULL, n.iter = 100, MaxNWts = 1500, \dots )
-  \S4method{resid}{mi.categorical}(object, y)
+  \S3method{residuals}{mi.categorical}(object, y, \dots)
   \S3method{plot}{mi.categorical}( x, y, main=deparse( substitute( y ) ), gray.scale = FALSE, \dots)
 }
 \arguments{
