@@ -2,7 +2,9 @@
     * DESCRIPTION (Version, Date): 0.02-02
     * reverse S4 coef methods back to S3 to pass R check
     * reverse S4 fitted methods back to S3 to pass R check
+    * reverse S4 residuals methods back to S3 to pass R check
     * reverse S4 plot methods back to S3 to pass R check
+    * currently, no resid S3 methods
 
 2008-9-9  Yu-Sung Su     <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 0.02-01
